--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "socket.io-client": "^1.7.2"
   },
   "devDependencies": {},
