get react running in browser

--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "generals.io-node.js-bot-example",
-  "version": "1.0.0",
+  "name": "bot",
+  "version": "0.1.0",
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "socket.io-client": "^1.7.2"
+    "grommet": "^2.7.11",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "^3.2.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {},
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "scripts": {
-    "test": "echo 'No tests implemented.'"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -27,5 +36,17 @@
   "bugs": {
     "url": "https://github.com/vzhou842/generals.io-Node.js-Bot-example/issues"
   },
-  "homepage": "https://github.com/vzhou842/generals.io-Node.js-Bot-example#readme"
+  "homepage": "https://github.com/vzhou842/generals.io-Node.js-Bot-example#readme",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
