--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,10 @@ dump.rdb
 
 .gitignore~
 
+.vscode
+package-lock.json
 # Use the --save option of npm install to alter package.json (e.g.,
 # “npm install --save my-package-name”). To restore packages after
 # checking out, simply run “npm install”.
 node_modules
-
-.env
+config.js
